--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,7 @@
 html,
 body,
-canvas {
+canvas,
+pre {
   width: 100%;
   height: 100%;
 }
@@ -8,4 +9,21 @@ canvas {
 body {
   margin: 0;
   line-height: 0;
+}
+
+pre {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0.5em;
+
+  font-size: 2em;
+  line-height: 1.2;
+  pointer-events: none;
+  opacity: 0.25;
 }
